--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -104,11 +104,7 @@ target_include_directories(
 )
 
 set(SKSE_SUPPORT_XBYAK ON)
-add_subdirectory("$ENV{CommonLibSSEPath}" CommonLibSSE EXCLUDE_FROM_ALL)
-
-if(BUILD_SKYRIM_AE)
-	add_compile_definitions(SKYRIM_SUPPORT_AE)
-endif(BUILD_SKYRIM_AE)
+add_subdirectory("$ENV{CommonLibSSEPath_NG}" CommonLibSSE EXCLUDE_FROM_ALL)
 
 find_package(xbyak REQUIRED CONFIG)
 
