Implemented a name provider to access NND if present

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,9 @@ set(SOURCE_FILES
 	"${SOURCE_DIR}/main.cpp"
 	"${SOURCE_DIR}/ModAPI.cpp"
 	"${SOURCE_DIR}/ModAPI.h"
+	"${SOURCE_DIR}/NND_API.h"
+	"${SOURCE_DIR}/NPCNameProvider.cpp"
+	"${SOURCE_DIR}/NPCNameProvider.h"
 	"${SOURCE_DIR}/Offsets.h"
 	"${SOURCE_DIR}/Papyrus.cpp"
 	"${SOURCE_DIR}/Papyrus.h"
